# screenCaptureUsingFFMPEG_API

./: .gitignore  CMakeLists.txt  README.md  screenCaptureUsingFFMPEG_API.sln
screenCaptureUsingFFMPEG_API/: main.cpp  screenCaptureUsingFFMPEG_API.vcxproj  screenCaptureUsingFFMPEG_API.vcxproj.filters  screen_recorder.cpp  screen_recorder.h  thread_safe_data.hpp  thread_safe_flag.h  thread_safe_queue.hpp
src/: main.cpp  screen_recorder.cpp
